# Django-Vue

backend/: README.md  pyproject.toml
backend/api/: auth.py
backend/backend/: api.py  settings.py  urls.py
backend/users/: admin.py  auth.py  schemas.py
backend/users/migrations/: 0001_initial.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/BasicVue/: README.md  package.json
frontend/src/: main.ts
frontend/src/api/: api.ts  auth.ts
frontend/src/router/: index.ts
frontend/src/views/: LoginPage.vue  RegisterPage.vue
part_of_AI/: pyproject.toml
